--- a/metalized.css
+++ b/metalized.css
@@ -237,7 +237,7 @@ main{
     padding-left: 23px;
     position: absolute; 
     top: 50%; 
-    right: 69%;
+    right: 69.5%;
     transform: translate(-50%, -50%); 
     color: white;
     background-color: #5e5e5ec7;
@@ -273,10 +273,11 @@ main{
 
 .contenedorArtista{
     display: inline-block;
-    width: 30.5%;
+    width: 30%;
     margin: 10px;
     align-items: center;
     position: relative; 
+    justify-content: center;
 }
 
 .contenedorArtista::after {
@@ -309,11 +310,13 @@ main{
     width: 100%;
     height: 100%;
     border-radius: 100%;
+    margin: 0px;
 }
 
 .contenedorArtista p {
     text-align: center;
     justify-content: center;
+    align-self: center ;
     font-weight: bolder;
 }
 
@@ -327,12 +330,7 @@ main{
 
 .contenedorCancion img{
     width: 150px;
-    align-content: center;
-    justify-content: center;
-    margin: 5%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 100%;
     max-width: 100%;
     height: auto;
 }
@@ -346,9 +344,9 @@ main{
 }
 
 .artista {
-    font-size: 18px;
+    font-size: 20px;
     margin: 0px;
-    margin-bottom: 10px;
+    margin-top: 10px;
     text-align: center;
     font-weight: bold;
     justify-content: center;
