--- a/infoArtista.css
+++ b/infoArtista.css
@@ -783,8 +783,7 @@ footer{
     
     .tituloC{
         font-size: 18px;
-        margin: 7.5% 5px ;
-        margin-left: 15px;
+        margin: 7.5% 5px  7.5% 15px ;
     }
     
     .duracion{
@@ -972,11 +971,12 @@ footer{
     }
 
     .info-popular{
-        width: 70%;
+        width: 80%;
     }
 
     .tituloC{
-        font-size: 18px;
+        font-size: 20px;
+        margin-top: 6%;
     }
 
     .duracion{
@@ -1080,8 +1080,8 @@ footer{
     
     #barraReproductora-iconos img{
         margin: 15px;
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
     }
 }
 
@@ -1096,7 +1096,7 @@ footer{
     .info{
         width: 70%;
         height: 90%;
-        justify-content: center;
+        align-content: center;
     }
     .contenedor2{
         margin-top: 3%;
@@ -1122,6 +1122,10 @@ footer{
         grid-template-columns: repeat(3, 1fr); 
         grid-gap: 5px;
     }
+        
+    #infoCancion{
+        width: 82%;
+    }
 }
 
 @media(min-width: 1200px){
@@ -1131,5 +1135,14 @@ footer{
     .fotoynombre img{
         width: 250px;
         height: 250px;
+    }
+    #barraReproductora-iconos{
+        margin-top: -90px;
+    }
+}
+
+@media(min-width: 1500px){
+    #barraReproductora-iconos{
+        margin-top: -110px;
     }
 }
