--- a/ARTISTA.css
+++ b/ARTISTA.css
@@ -235,56 +235,89 @@ main{
     margin: 15px;
 }
 
-.carousel{
-    padding: 5px;
-    width: 100%;
-    overflow: hidden; 
+.carousel {
+    display: flex;
+    align-items: center;
 }
 
 .slides {
-    display: inline-flex; /* Asegúrate de que los slides estén en línea */
-    transition: transform 0.5s ease; /* Suaviza el movimiento */
-}
-.slide-container{
-    display: inline-flex; 
+    overflow: hidden;
+    width: 80%;
+    position: relative;
 }
 
-.contenedorArtista{
-    background-color: rgb(70, 70, 70);
-    padding: 5px;
-    align-items: center ;
-    width: 150px;
-    position: relative; 
-    min-width: 20%; /* 5 elementos visibles, 100% / 5 = 20% */
+.slide-container {
+    display: flex;
+    transition: transform 0.5s ease;
+}
+
+.contenedorArtista {
+    min-width: 20%;
     box-sizing: border-box;
-    padding: 10px; /* Espaciado entre elementos */
+    padding: 0px; 
 }
 
-.contenedorArtista::after {
-    width: 37px;
-    height: 45px;
-    content: "▶"; 
-    font-size: 25px; 
-    padding-top: 15px;
-    padding-left: 23px;
-    position: absolute; 
-    top: 50%; 
-    right: 20%;
-    transform: translate(-50%, -50%); 
+/* Estilos para los botones */
+.seccionBoton {
+    flex: 0 0 50px; /* Ancho fijo para los botones */
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    background-color: #333; /* Color de fondo de los botones */
+    color: white; /* Color del texto */
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px; /* Bordes redondeados */
+}
+
+button:hover {
+    background-color: #555; /* Color de fondo al pasar el ratón */
+}
+
+.carousel-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 80%;
+    margin: 0px;
+}
+
+.carousel {
+    overflow: hidden;
+    width: 100%; /* Ajusta el tamaño según necesites */
+}
+
+.carousel-inner {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.carousel-inner img {
+    width: 150px; /* Ancho de cada imagen */
+    height: 150px;
+    margin: 0 0px;
+}
+
+.prev-btn, .next-btn {
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
-    background-color: #5e5e5ec7;
-    border-radius: 100%;
-    opacity: 0; 
-    transition: opacity 0.3s; 
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    position: absolute;
+    transform: translateY(-50%);
 }
 
-.contenedorArtista:hover::after {
-    opacity: 1;
+.prev-btn {
+    left: 0;
 }
 
-.contenedorArtista:hover{
-    cursor:pointer;
-    background-color: #5e5e5e;
+.next-btn {
+    right: 0;
 }
 
 .contenedorArtista img{
@@ -330,8 +363,7 @@ button:hover{
     justify-content: center;
     color: rgb(29, 29, 29);
 }
-/**/
-/* ++++++++++++ MAIN (INICIO) +++++++++++ */
+
 
 /* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/
 footer{
@@ -427,258 +459,4 @@ footer{
     align-items: center;
     transition: width 0.25s;
     border-radius: 5px;
-}
-
-
-/* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/
-
-@media (max-width: 500px){
-    header{
-        height: 85vh;
-        width: 1cm;
-    }
-
-    #contenedor{
-        width: 100%;
-    }
-
-    .menu a{
-        display: none;
-    }
-
-    .menu ul{
-        margin-left: -26px;
-    }
-
-    #inicio, #descubre{
-    display: none;
-}
-
-    .seccionUsuario{
-        justify-content: center;
-        margin: 5px 7px 0px 7px;
-    }
-
-    .seccionUsuario h2{
-        display: none;
-    }
-
-    .seccionUsuario img{
-        width: 40px;
-        height: 40px; 
-    }
-
-    #mi_libreria p{
-        display:none;
-    }
-
-    .nyl h2{
-        display: none;
-    }
-
-    .nyl{
-        width: 45px;
-        height: 45px;
-        padding: 0px;
-        margin: 0px;
-        margin-left: -2px;
-    }
-
-    .nyl img{
-        width: 42px;
-        height: 42px;
-    }
-
-    main{
-        width: 95%;
-        margin-left: 10px;
-        margin-right: -7px;
-        height: 100%;
-        float: right;
-    }
-
-    .solapa h1{
-        display:none;
-    }
-
-    .solapa{
-        width: 100px;
-        height: 43px;
-    }
-
-    .barra_horizontal{
-        height:45px;
-        margin-bottom: 0px;
-    }
-
-    .barraBusq{
-        background-color: rgb(0, 0, 0);
-        border: black;
-        margin-left: 190px;
-        width: 30px;
-    }
-
-    .barraBusq img{
-        width: 25px;
-        height: 25px;
-        margin: 10px;
-    }
-
-    .barraBusq h3{
-        display: none;
-    }
-
-    #imagenCancion img{
-        width: 50px;
-        height: 50px;
-        margin: 7px;
-    }
-
-    #artista{
-        height: 78vh;
-        margin-top: 5px;
-        padding: 2px;
-    }
-
-    #artista img{
-        width: 30%;
-        height: 70%;
-        margin: 3px;
-    }
-
-    .fotoynombre{
-        padding: 5px;
-        width: 97%;
-        height: 20%;
-        margin-bottom: 5px;
-    }
-
-    .info{
-        width:65%;
-    }
-
-    .info h1{
-        font-size: 20px;
-        margin: 10px 20px 10px 3px;
-    }
-
-    .info p{
-        font-size: 12px;
-        margin-left: 5px;
-    }
-
-    #imagenCancion{
-        width: 70%;
-        margin-top: 2%;
-    }
-
-    #imagenCancion img{
-        margin-right: 0px;
-        width: 20%;
-        height: 20% ;
-    }
-
-    #infoCancion{
-        width: 75%;
-        height: 25%;
-        margin-top: -25px;
-        margin-left: 0px;
-    }
-
-    #infoCancion h2{
-        font-size: 16px;
-        margin-bottom: 5px;
-    }
-
-    #infoCancion h3{
-        font-size: 14px;
-    }
-
-    #barraProgreso{
-        display:none;
-    }
-
-    #barraProgreso-responsive{
-        display: flex;
-        background-color: #5f1010;
-        height: 3px;
-        width: 95%;;
-        margin-left: 1.25%;
-        margin-right: 1.25%;
-    }
-
-    .progress-responsive {
-        height: 3px;
-        border-radius: 5px;
-        background-color: #000000;
-        justify-content: center;
-    }
-
-    .progress-bar-responsive {
-        height: 100%;
-        display: flex;
-        background-color: #0e0e0e;
-        align-items: center;
-        border-radius: 5px;
-    }
-    
-    #barraReproductora-iconos{
-        width: 100%;
-        height: 100%;
-        margin: 0px;
-        padding-top: 15%;
-    }
-
-    #barraReproductora-iconos img{
-        width: 22px;
-        height: 22px;
-        margin: 4px;
-    }
-
-    #repetir, #aleatorio{
-        display: none;
-    }
-
-    #barraReproduccion{
-        width: 30%;
-        height: 90%;
-        margin: 0;
-        margin-top: 2%;
-        float: left;
-        flex-wrap: wrap;
-        align-content: center;
-    }
-
-    #contenedor2{
-        width: 100%;
-        height: 50%;
-    }
-
-    #canciones{
-        width: 96%;
-        padding: 6px;
-    }
-
-    #canciones h1{
-        font-size: 18px;
-        margin: 5px;
-    }
-
-    #cancion{
-        width: 98%;
-        height: 30%;
-    }
-
-    #cancion img{
-        width: 20%;
-        height: 20%;
-    }
-
-    .info-popular{
-        margin-right: 20%;
-    }
-
-    .info-popular h3{
-        font-size: 15px;
-    }
 }
