--- a/albumes.css
+++ b/albumes.css
@@ -411,6 +411,10 @@ footer{
     margin-left: 20%;
 }
 
+#barraReproductora-iconos:hover{
+    cursor:pointer;
+}
+
 #barraReproductora-iconos img{
     margin: 15px;
     width: 25px;
