--- a/canciones.css
+++ b/canciones.css
@@ -413,6 +413,10 @@ footer{
     margin-left: 20%;
 }
 
+#barraReproductora-iconos:hover{
+    cursor:pointer;
+}
+
 #barraReproductora-iconos img{
     margin: 15px;
     width: 25px;
