--- a/infoArtista.css
+++ b/infoArtista.css
@@ -906,8 +906,8 @@ footer{
         list-style-type: none;
         list-style: none;
         margin: 15px 5px;
-        align-items: center;
         height: 23px;
+        text-align: left;
     }
     
     a{
@@ -1125,6 +1125,23 @@ footer{
         
     #infoCancion{
         width: 82%;
+    }
+
+    #imagenCancion{
+        height: 100%;
+    }
+
+    .info-popular{
+        width: 75%;
+    }
+
+    .imagenCancion img{
+        width: 60px;
+        height: 60px;
+    }
+
+    footer{
+        padding-top: 2px;
     }
 }
 
