--- a/Metalized.css
+++ b/Metalized.css
@@ -150,9 +150,18 @@ main{
     color:#a7a7a7;
 }
 
+button{
+    border: black;
+}
+
+button:hover{
+    cursor:pointer;
+}
+
 .seccionUsuario {
     display: inline-block;
     background-color: black;
+    border: black;
     float: right;
 }
 
@@ -237,7 +246,7 @@ main{
     padding-left: 23px;
     position: absolute; 
     top: 50%; 
-    right: 71%;
+    right: 69%;
     transform: translate(-50%, -50%); 
     color: white;
     background-color: #5e5e5ec7;
@@ -366,11 +375,11 @@ footer{
     margin-bottom: 5%;
 }
 
-#infoCancion h3, .artistaF{
+#infoCancion h3{
     font-size:12px;
     color: rgba(0, 0, 0, 0.651);
     margin-top: 0px;
-    margin-left: 15px;
+    margin-left: 0px;
 }
 
 #imagenCancion img{
