--- a/canciones.css
+++ b/canciones.css
@@ -150,6 +150,11 @@ button:hover{
     float: right;
 }
 
+.seccionUsuario:hover{
+    cursor:pointer;
+}
+
+
 .seccionUsuario h2{
     float: left;
     margin-top: 10px;
